# mobilewebview

./: .gitignore  BUILD.md  Makefile  README.md
.github/workflows/: ci.yml
make/: android.mk  ios.mk  macos.mk  tests.mk
mobilewebview/: CMakeLists.txt  README.md
mobilewebview/android/src/org/mobilewebview/: BridgeScriptBuilder.java  MobileWebView.java  OriginUtils.java  UrlLoadingHelper.java  WebViewUrlPolicy.java
mobilewebview/android/tests/org/mobilewebview/: BridgeScriptBuilderTest.java  OriginUtilsTest.java  WebViewUrlPolicyTest.java
mobilewebview/include/MobileWebView/: mobilewebviewbackend.h
mobilewebview/src/: customwebview.qrc
mobilewebview/src/android/: mobilewebviewbackend_android.cpp
mobilewebview/src/common/: mobilewebviewbackend.cpp  mobilewebviewbackend_p.h  origin_utils.cpp  origin_utils.h  snapshotimageprovider.cpp  snapshotimageprovider.h  snapshotitem.cpp  snapshotitem.h  userscript_utils.cpp  userscript_utils.h  webchanneltransport.cpp  webchanneltransport.h
mobilewebview/src/darwin/: dispatch_utils.h  mobilewebviewbackend_darwin.mm  navigationdelegate.h  navigationdelegate.mm  origin_utils.h  origin_utils.mm  script_utils.h  script_utils.mm  userscripts.h  userscripts.mm
mobilewebview/src/js/: bootstrap_bridge.js  bootstrap_bridge_android.js  bootstrap_page.js
mobilewebview/tests/: CMakeLists.txt  e2e_bridge_probe.js  tst_mobilewebview_e2e.mm  tst_mobilewebviewbackend_common.mm  tst_origin_utils.cpp  tst_userscript_utils.cpp  tst_userscripts_manager.mm  tst_webchanneltransport.cpp
test-app/: CMakeLists.txt  main.cpp
test-app/js/: qwebchannel.js  test_script.js
test-app/qml/: TestWidget.qml  TopBar.qml  main.qml
test-app/web/: test_webchannel.html
